fixing layout bug

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ body {
 	left: 0;
 	background-color: rgba(255, 255, 255, 0.9);
 	display: flex;
+	z-index: 2;
 }
 
 .confirmOrder {
